# ampcore

./: .gitignore  CMakeLists.txt  Makefile  README.md  audio_engine.cpp  audio_engine.h  effect_node.cpp  effect_node.h  file_input_node.cpp  file_input_node.h  fuzz.cpp  fuzz.h  main.cpp  node_base.h  processor_graph.cpp  processor_graph.h  source_node.cpp  source_node.h
demo/: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt  amp_capi.cpp  amp_capi.h  ampcoreConfig.cmake.in  ampcore_capi.cpp  ampcore_capi.h  audio_engine.cppm  effect_node.cppm  node_base.cppm  preset.cppm  processor_graph.cppm  sigchainConfig.cmake.in  sigchain_capi.cpp  sigchain_capi.h  source_node.cppm
lib/nodes/: audio_input_node.cppm  cabinet.cppm  compressor.cppm  delay.cppm  file_input_node.cppm  fuzz.cppm  meter_node.cppm  noise_gate.cppm  primitives.cppm  reverb.cppm  tone_stack.cppm
